@@ -1,3 +1,7 @@
+2002-01-16  Anders Carlsson  <andersca@gnu.org>
+
+	* gconf/gconf-client.c (gconf_client_get_full): Plug a leak.
+
 2002-01-14  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf.c (gconf_key_is_below): fix to handle root dir
